# cgo2022-artifacts

./: .gitignore  LICENSE  README.md  build.sh  build_llvm.sh  build_llvm12.sh  run.sh
RSBench/cuda/: Makefile
RSBench/openmp-offload/: Makefile
XSBench/openmp-offload/: Makefile
su3_bench/: .gitignore  CMakeLists.txt  Legal.txt  Makefile.cuda  Makefile.dpcpp  Makefile.hip  Makefile.hipsycl  Makefile.kokkos  Makefile.openacc  Makefile.opencl  Makefile.openmp  Makefile.openmp_cpu  Makefile.sycl  README.md  lattice.hpp  mat_nn_cuda.hpp  mat_nn_dpcpp.hpp  mat_nn_hip.hpp  mat_nn_kokkos.hpp  mat_nn_openacc.hpp  mat_nn_opencl.hpp  mat_nn_openmp.hpp  mat_nn_openmp2.hpp  mat_nn_sycl.hpp  su3.hpp  su3_nn_bench.cpp
su3_bench/utilities/: parse-result.sh  run-nsight.sh  run-nvprof.sh  run-roofline.sh  run-sweep.sh
